2015-02-11  Natalia Portillo  <claunia@claunia.com>

	* AppleEnums.cs:
	* AppleStructs.cs:
	* Claunia.IO.csproj:
	  Added FinderInfo and FinderFlags for Apple systems.

	* FileInfo.cs:
	* DirectoryInfo.cs:
	* FileSystemInfo.cs:
	  Added FileSystemInfo class

2015-02-08  Natalia Portillo  <claunia@claunia.com>

	* FileInfo.cs:
	* DirectoryInfo.cs:
	  Remove sporious Using statements, and formatted.

2015-02-08  Natalia Portillo  <claunia@claunia.com>

	* DirectoryInfo.cs:
	  Created DirectoryInfo class that cheats to inherint
	  System.IO.DirectoryInfo

	* FileInfo.cs:
	  Created FileInfo class that cheats to inherint
	  System.IO.FileInfo

	* Claunia.IO.csproj:
	  Removed skeleton empty class and added DirectoryInfo and
	  FileInfo classes.

2015-02-08  Natalia Portillo  <claunia@claunia.com>

	* DirectoryInfo.cs:
	  Created FileInfo class that cheats to inherint
	  System.IO.DirectoryInfo

	* FileInfo.cs:
	  Created FileInfo class that cheats to inherint
	  System.IO.FileInfo

	* Claunia.IO.csproj:
	  Removed skeleton class and added FileInfo and DirectoryInfo
	  classes.

	* MyClass.cs:
	  Removed skeleton empty class
